[gd_scene load_steps=12 format=3 uid="uid://dqgyq41g481x7"]

[ext_resource type="Script" uid="uid://kb26w28c7sl8" path="res://scene/sub_menu/sub_menu.gd" id="1_vny3a"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="2_8cfuc"]
[ext_resource type="FontFile" uid="uid://w674bdq23bld" path="res://font/Inter/static/Inter_24pt-Bold.ttf" id="2_jki83"]
[ext_resource type="ButtonGroup" uid="uid://dp07g88ksxgao" path="res://scene/main_menu/main_menu_button_group.tres" id="3_w8mho"]
[ext_resource type="Texture2D" uid="uid://dfjbc3ilirl4q" path="res://asset/ipsc-icon.png" id="4_8cfuc"]
[ext_resource type="Texture2D" uid="uid://bf21nuas7q0y2" path="res://asset/idpa-icon.png.png" id="5_8cfuc"]
[ext_resource type="Texture2D" uid="uid://114du5j7n7a5" path="res://asset/drill-history-icon.png" id="6_8cfuc"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="7_lt21p"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="8_kvq8n"]
[ext_resource type="AudioStream" uid="uid://i6eh50aq5t66" path="res://audio/Final Battle - For Love.ogg" id="9_audio"]

[sub_resource type="Theme" id="Theme_7ecdm"]
default_font = ExtResource("2_jki83")
default_font_size = 80
Label/colors/font_color = Color(0.87058824, 0.21960784, 0.13725491, 1)

[node name="sub_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vny3a")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.0
offset_top = 100.0
offset_right = 265.0
offset_bottom = 198.0
grow_horizontal = 2
theme = SubResource("Theme_7ecdm")
text = "MINI STAGES"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -316.0
offset_right = 316.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="IPSCButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_8cfuc")
toggle_mode = true
button_group = ExtResource("3_w8mho")
icon = ExtResource("4_8cfuc")
icon_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/GridContainer/IPSCButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_8cfuc")
text = "IPSC STAGE"

[node name="IDPAButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_8cfuc")
toggle_mode = true
button_group = ExtResource("3_w8mho")
icon = ExtResource("5_8cfuc")
icon_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/GridContainer/IDPAButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_8cfuc")
text = "IDPA STAGE"

[node name="HistoryIPSCButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_8cfuc")
toggle_mode = true
button_group = ExtResource("3_w8mho")
icon = ExtResource("6_8cfuc")
icon_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/GridContainer/HistoryIPSCButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_8cfuc")
text = "IPSC DRILL HISTORY"

[node name="HistoryIDPAButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_8cfuc")
toggle_mode = true
button_group = ExtResource("3_w8mho")
icon = ExtResource("6_8cfuc")
icon_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/GridContainer/HistoryIDPAButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_8cfuc")
text = "IDPA DRILL HISTORY"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
theme_override_fonts/font = ExtResource("7_lt21p")
horizontal_alignment = 1
vertical_alignment = 2

[node name="VolumeControl" parent="." instance=ExtResource("8_kvq8n")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_audio")
